[package]
name = "timg"
version = "1.2.0"
authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["terminal", "image", "term"]
description = "Display image for terminal (VT100)"
categories = ["command-line-utilities"]
license-file = "LICENSE"
repository = "https://github.com/A4-Tacks/timg"
homepage = "https://github.com/A4-Tacks/timg"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.*"
#imageproc = "0.23.*"
clap = "2.27.0"
term_size = "0.3.2"

