[package]
name = "timg"
version = "2.1.0"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["terminal", "image", "ansi_term", "tui", "viewer"]
description = "Interactive Image Viewer on Terminal (xterm)"
categories = ["command-line-utilities"]

license = "MIT"
repository = "https://github.com/A4-Tacks/timg"
homepage = "https://github.com/A4-Tacks/timg"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
clap = "2.27.0"
term_size = "0.3.2"
term_lattice = "0.4.2"
raw_tty = "0.1.0"


[profile.dev]
opt-level = 1


[profile.release]
strip = true
